--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nouns-kingdom-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nouns-kingdom.github.io/nouns-kingdom",
   "dependencies": {
     "@fluentui/react-components": "^9.0.0",
     "react": "^18.0.0",
@@ -12,10 +13,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint-config-prettier": "^10.1.8",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "gh-pages": "^6.0.0"
   }
 }
